--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
@@ -24,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-type-animation": "^3.2.0",
+    "serve": "^14.2.3",
     "sweetalert2": "^11.11.0",
     "tailwindcss": "^3.4.3",
     "tsparticles-engine": "^2.12.0"
